# valkai

./: README.md
take-home/: CLAUDE.md  README.md  mise.toml  pyproject.toml  setup.sh
take-home/BE/: CLAUDE.md  DESIGN.md  README.md  db.sqlite3  pyproject.toml
take-home/BE/agent/: sdk_agent.py
take-home/BE/agent/memory/: base.py  buffer.py  retrieval.py  summary.py  window.py
take-home/BE/chat/: apps.py  models.py  serializers.py  urls.py  views.py
take-home/BE/chat/migrations/: 0001_initial.py  0002_change_saved_memory_to_tool_use.py  0003_evalrun.py
take-home/BE/chat/services/: db.py  evals.py  message.py  session.py
take-home/BE/chatproject/: asgi.py  settings.py  urls.py  wsgi.py
take-home/BE/evals/: test_agent.py  test_integration.py  test_memory.py
take-home/BE/harness/: run_comparison.py
take-home/BE/src/agent/: sdk_agent.py
take-home/BE/src/agent/memory/: __init__.py  summary.py
take-home/FE/: index.html  package-lock.json  package.json
take-home/FE/src/: App.tsx  api.ts  index.css
take-home/FE/src/components/: Chat.module.css  Chat.tsx  Evals.module.css  Evals.tsx  Selector.module.css  Selector.tsx  Sidebar.module.css  Sidebar.tsx
take-home/evals/: test_integration.py  test_memory.py
take-home/harness/: run_comparison.py
take-home/src/agent/: cli.py  sdk_agent.py
take-home/src/agent/memory/: base.py  retrieval.py  summary.py  window.py
